modal project addition

--- a/index.css
+++ b/index.css
@@ -26,6 +26,8 @@ body{
     font-size: 27px;
     font-family: 'Times New Roman', Times, serif;
     margin-bottom: 6%;
+    opacity: 0.9;
+
     
     
 }
@@ -39,6 +41,7 @@ body{
     margin: auto;
     width: 40%;
     margin-bottom: 3%;
+
     
     
     
@@ -51,6 +54,14 @@ body{
     font-weight: 500;
     margin-bottom:30px ;
     max-height: 15%;
+
+}
+.quote:hover{
+
+    font-size: 32px;
+    transition: 0.5s;
+
+
 }
 
 #button{
@@ -58,6 +69,8 @@ body{
     border-radius: 5px;
     border: 2px solid greenyellow;
     position: static;
+    transition: 0.2s;
+
     
 }
 
