--- a/modalProjectjs/index2.css
+++ b/modalProjectjs/index2.css
@@ -72,6 +72,7 @@ body{
     font-size: 22px;
     display: inline-block;
     border: 1px solid rgb(190, 185, 185);
+    cursor: pointer;
 }
 
 @keyframes comeDown {
